compiler/tools/fpp-check/test/component_struct_format_not_numeric.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_struct_format_not_numeric.fpp: 2.26
struct S2 { x: S1 format "{.3f}" }
                         ^
error: invalid format string: type struct S1 is not numeric
